fixed extra space

--- a/client/src/components/LoginModal/LoginModal.css
+++ b/client/src/components/LoginModal/LoginModal.css
@@ -5,7 +5,6 @@
   align-items: center;
 
   height: 100vh;
-  width: 100vw;
 }
 
 .loginModal {
